--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 #container{
+    margin-top: 100px;
     padding:30px;
     background-color: gray;
     display: flex;
+    max-width: 300px;
     flex-direction: column;
+    gap:10px;
+    border-radius: 20px;
 }
 
 #output{
@@ -22,17 +32,47 @@
 #output #history{
     font-size: 12px;
 }
+.buttons{
+    display: flex;
+    justify-content: space-evenly;
+    gap:10px;
+
+}
+
 
 
 .numbers,
 .operators{
-    border-radius: 100px;
-}
-.numbers{
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgb(65, 65, 65);
     display:flex;
     justify-content: center;
     flex-wrap: wrap;
-    max-width: 170px;
+}
+.numbers{
+
+    max-width: 150px;
+    justify-content: end;
+}
+.operators{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+#resets{
+    display: flex;
+}
+#resets button,
+#equals{
+    font-size: 18px;
+    font-weight: 700;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    flex:1;
+    border-radius: 10px;
+    border-width: 3px;
 }
 
 
